fixing link that's too long
Former-commit-id: 1ca2746e8b056d17bf2a3c4c82e0dc4f8e271435

--- a/css/3-layout/_layout.sass
+++ b/css/3-layout/_layout.sass
@@ -1,3 +1,6 @@
+a.break
+	word-break: break-all
+
 .image-text-container
 	align-items: center
 	border-bottom: 0.1em solid rgba(128, 128, 128, 0.25)
